--- a/workout/templates/workout/overview.html
+++ b/workout/templates/workout/overview.html
@@ -1,17 +1,20 @@
 {% extends "workout/base.html" %}
 {% block content %}
-  <div class="container">
+  <div class="container" style="padding-top: 30px">
     <h3>Past Workouts</h3>
   </div>
   {% for workout in workouts %}
-  <div class="container">
+  <div class="container" style="padding-top: 30px">
     <div class="card" style="">
       <div class="card-body">
         <h5 class="card-title font-weight-bold">{{ workout.name}}</h5>
         <p class="card-text">{{ workout.description }}</p>
-        <a href="#" class="btn btn-primary">Workout Detail</a>
+        <p class="card-text font-italic">{{ workout.dateTime }}</p>
+        <a href="{% url 'workout_detail' workout.pk %}" class="btn btn-primary">Workout Detail</a>
       </div>
     </div>
-</div>
+  </div>
+
   {% endfor %}
 {% endblock %}
+
