Reorganize database and work on details page

--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -19,7 +19,7 @@
     <header class="site-header">
       <nav class="navbar navbar-dark bg-dark">
 
-          <a class="navbar-brand" href=#>Workout Tracker</a>          
+          <a class="navbar-brand" href="{% url 'workout_overview' %}">Workout Tracker</a>          
 
       </nav>
     </header>
