Update details page

--- a/workout/templates/workout/detail.html
+++ b/workout/templates/workout/detail.html
@@ -7,22 +7,22 @@
     <div class="container">
       <div class="card">
         <div class="card-header">{{ e.name }}</div>
-          <div class="col">
-            <div class="p-3 border bg-light">/div>
-          </div> {% comment %} figure out how the Bootstrap grid system works{% endcomment %}
-      </div>
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4 text-center">Reps</div>
+          <div class="col-4 text-center">Weight</div>
+        </div>
+        {% for s in e.set.all %}
+          <div class="row">
+            <div class="col-4 text-center">Set {{ forloop.counter }}</div>
+            <div class="col-4 text-center">{{ s.reps }}</div> 
+            <div class="col-4 text-center">{{ s.weight }}</div> 
+          </div>  
+        {% endfor %}
     </div>
-{% comment %}     <h4>{{ e.name }}</h4>
-      {% for s in e.set.all %}
-        <h5>{{ s }}</h5>
-      {% endfor %} {% endcomment %}
+  </div>
+  </br>
   {% endfor %}
 {% endblock content %}
 
 
-
-  <div class="row gx-5">
-    <div class="col">
-     <div class="p-3 border bg-light">Custom column padding</div>
-    </div>
-  </div>
