--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -17,15 +17,24 @@
 
 <body>
     <header class="site-header">
-      <nav class="navbar navbar-dark bg-dark">
-
-          <a class="navbar-brand" href="{% url 'workout_overview' %}">Workout Tracker</a>          
-
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark"> 
+        <div class="container">
+          <a class="navbar-brand mr-4" href="{% url 'workout_overview' %}">Workout Tracker</a>          
+          <div class="navbar-nav">
+            {% if not user.is_authenticated %}
+              <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+              <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+            {% else %}
+              <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
+            {% endif %}
+          </div>
+        </div>
       </nav>
     </header>
     <main role="main" class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
+          <br>
           {% if messages %}
             {% for message in messages %}
               <div class="alert alert-{{ message.tags }}">
