--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -1,5 +1,15 @@
 {% extends "workout/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-  {% crispy form %}
+  <form method="POST">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Test</legend>
+      {{ form|crispy }}
+      {{ form_2|crispy }}
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-outline-info" type="submit">Save</button>
+    </div>
+  </form>
 {% endblock content %}
