Add workout delete view

--- a/workout/templates/workout/detail.html
+++ b/workout/templates/workout/detail.html
@@ -24,6 +24,9 @@
   </div>
   </br>
   {% endfor %}
+  <div class="container">
+    <a class="btn btn-danger" href="{% url 'workout_delete' pk=object.pk %}">Delete Workout</a>
+  </div>
 {% endblock content %}
 
 
