Uncomment enough to get the overview page working

--- a/workout/templates/workout/overview.html
+++ b/workout/templates/workout/overview.html
@@ -13,7 +13,7 @@
         <h5 class="card-title font-weight-bold">{{ workout.name}}</h5>
         <p class="card-text">{{ workout.description }}</p>
         <p class="card-text font-italic">{{ workout.dateTime }}</p>
-        <a href="{% url 'workout_detail' workout.pk %}" class="btn btn-primary">Workout Detail</a>
+        {% comment %}<a href="{% url 'workout_detail' workout.pk %}" class="btn btn-primary">Workout Detail</a> {% endcomment %}
       </div>
     </div>
   </div>
