--- a/workout/templates/workout/detail.html
+++ b/workout/templates/workout/detail.html
@@ -7,15 +7,15 @@
   {% for e in object.exercises.all %}
     <div class="container">
       <div class="card">
-        <div class="card-header">{{ e.name }}</div>
+        <div class="card-header">{{ e.exercise_type.name }}</div>
         <div class="row">
           <div class="col-4"></div>
           <div class="col-4 text-center">Reps</div>
           <div class="col-4 text-center">Weight</div>
         </div>
-        {% for s in sets|index:forloop.counter %}
+        {% for s in e.sets.all %}
           <div class="row">
-            <div class="col-4 text-center">Set {{ forloop.counter }}</div>
+            <div class="col-4 text-center">Set {{ s.set_number }}</div>
             <div class="col-4 text-center">{{ s.reps }}</div> 
             <div class="col-4 text-center">{{ s.weight }}</div> 
           </div>  
