Get workout creation working for single exercise with one set

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -44,10 +44,10 @@
             <label>Set 1</label> 
           </div>
           <div class="col-md-5">
-            <input type="text" class="form-control" name="set1-weight"></input>
+            <input type="text" class="form-control" name="E1S1-weight"></input>
           </div>
           <div class="col-md-5">
-            <input type="text" class="form-control" name="set1-reps"></input>
+            <input type="text" class="form-control" name="E1S1-reps"></input>
           </div>
         </div>
       </div>
@@ -62,8 +62,11 @@
         </div>
       </div>
     </fieldset>
-    <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Save</button>
+    <div class="container">
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit" name="save" value="save">Save</button>
+        <button class="btn btn-outline-info" type="submit" name="finish" value="finish">Finish</button>
+      </div>
     </div>
   </form>
 {% endblock content %}
