Add buttosn for adding and removing sets

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -30,26 +30,53 @@
           </div>
         </div>
         <div class="row mt-4">
-          <div class="col-md-2">
+          <div class="col-2">
           </div>
-          <div class="col-md-5">
+          <div class="col-3">
             <div class="d-flex justify-content-center">Weight</div>
           </div>
-          <div class="col-md-5">
+          <div class="col-3">
             <div class="d-flex justify-content-center">Reps</div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-2">
             <label>Set 1</label> 
           </div>
-          <div class="col-md-5">
+          <div class="col-3">
             <input type="text" class="form-control" name="E1S1-weight"></input>
           </div>
-          <div class="col-md-5">
+          <div class="col-3">
             <input type="text" class="form-control" name="E1S1-reps"></input>
           </div>
+          <div class="col-2">
+            <button type="button" class="btn btn-outline-success">Add New Set
+            </button>
+          </div>
+          <div class="col-2">
+            <button type="button" class="btn btn-outline-danger">Remove Set
+            </button>
+          </div>
         </div>
+{% comment %}  {% endcomment %}
+        <div class="row">
+          <div class="col-2">
+            <label>Set 1</label> 
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" name="E1S1-weight"></input>
+          </div>
+          <div class="col-3">
+            <input type="text" class="form-control" name="E1S1-reps"></input>
+          </div>
+          <div class="col-3">
+            <div class="btn-group">
+              <button type="button" class="btn btn-outline-success">Add</button>
+              <button type="button" class="btn btn-outline-danger">Remove</button>
+            </div>
+          </div>
+        </div>
+        {% comment %}  {% endcomment %}
       </div>
       <div class="container">
         <div class="row">
