--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -11,6 +11,12 @@
     .navbar-brand{
       font-size : 35px
     }
+    label{
+      white-space: nowrap;
+    }
+    .btn-group button{
+      margin: 0 7px; 
+    }
   </style>
   <title>Workout Tracker</title>
 </head>
