--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -50,15 +50,17 @@
             <input type="text" class="form-control" name="E1S1-reps"></input>
           </div>
           <div class="col-2">
-            <button type="button" class="btn btn-outline-success">Add New Set
-            </button>
-          </div>
-          <div class="col-2">
             <button type="button" class="btn btn-outline-danger">Remove Set
             </button>
           </div>
         </div>
-{% comment %}  {% endcomment %}
+        <div class="row mt-2 justify-content-start">
+          <div class="col-2"></div>
+          <div class="col-3">
+            <button type="button" class="btn btn-outline-success">Add New Set</button>
+          </div>
+        </div>
+{% comment %}
         <div class="row">
           <div class="col-2">
             <label>Set 1</label> 
