--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -54,7 +54,7 @@
             </button>
           </div>
         </div>
-        <div class="row mt-2 justify-content-start">
+        <div class="row mt-2 justify-content-start" id="addSetButton">
           <div class="col-2"></div>
           <div class="col-3">
             <button type="button" class="btn btn-outline-success" id="addSet">Add New Set</button>
@@ -106,7 +106,10 @@
     const addSet = document.getElementById("addSet");
     addSet.addEventListener("click", cloneSetForm);
     function cloneSetForm(){
-      console.log("test");
+      const clonedSet = document.getElementById("set1").cloneNode(true);
+      console.log(clonedSet);
+      const target = document.querySelector('#addSetButton');
+      target.before(clonedSet);
     }
   </script>
 {% endblock js %}
