Add sets to exercise dynamically using js

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -40,7 +40,7 @@
             <div class="d-flex justify-content-center">Reps</div>
           </div>
         </div>
-        <div class="row" id="set1">
+        <div class="row set" id="set1">
           <div class="col-2">
             <label>Set 1</label> 
           </div>
@@ -51,43 +51,14 @@
             <input type="text" class="form-control" name="E1S1-reps"></input>
           </div>
           <div class="col-2">
-            <button type="button" class="btn btn-outline-danger" id="removeSet">Remove Set
+            <button type="button" class="btn btn-outline-danger removeSet">Remove Set
             </button>
           </div>
         </div>
         <div class="row mt-2 justify-content-start" id="addSetButton">
           <div class="col-2"></div>
           <div class="col-3">
-            <button type="button" class="btn btn-outline-success" id="addSet">Add New Set</button>
-          </div>
-        </div>
-{% comment %}
-        <div class="row">
-          <div class="col-2">
-            <label>Set 1</label> 
-          </div>
-          <div class="col-3">
-            <input type="text" class="form-control" name="E1S1-weight"></input>
-          </div>
-          <div class="col-3">
-            <input type="text" class="form-control" name="E1S1-reps"></input>
-          </div>
-          <div class="col-3">
-            <div class="btn-group">
-              <button type="button" class="btn btn-outline-success">Add</button>
-              <button type="button" class="btn btn-outline-danger">Remove</button>
-            </div>
-          </div>
-        </div>
-        {% comment %}  {% endcomment %}
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md">
-            
-          </div>
-          <div class="col-md-10">
-            
+            <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
           </div>
         </div>
       </div>
@@ -103,29 +74,5 @@
 
 
 {% block js %}
-<script src={% static 'workout/js/form.js' %}></script>
-  {% comment %} <script>
-    const addSet = document.querySelector("#addSet");
-    addSet.addEventListener("click", cloneSetForm);
-    function cloneSetForm(){
-      const clonedSet = document.getElementById("set1").cloneNode(true);
-      console.log(clonedSet);
-      const target = document.querySelector('#addSetButton');
-      target.before(clonedSet);
-    }
-
-
-    function removeClickHandler(e) {
-      if (e.target.matches('#removeSet')) {
-        console.log(e.target.parentNode.parentNode);
-        e.target.parentNode.parentNode.remove();
-      }
-    }
-    // reference to a list
-    const exercise1 = document.querySelector('#exercise1');
-
-    // add a single listener on list item
-    exercise1.addEventListener('click', removeClickHandler);
-
-  </script> {% endcomment %}
+  <script src={% static 'workout/js/form.js' %}></script>
 {% endblock js %}
