--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -16,51 +16,57 @@
           </div>
         </div>
       </div>
-      <div class="container" id="exercise1">
-        <div class="row mt-4">
-          <div class="col-md">
-            <label>Exercise</label>
+      <div class="exercises">
+        <div class="container exercise" id="exercise1">
+          <div class="row mt-4">
+            <div class="col-md">
+              <label>Exercise</label>
+            </div>
+            <div class="col-md-10">
+              <select name="exercise">
+                <option value="----">----</option>
+                {% for exercise in exercises %}
+                  <option value="{{ exercise.name }}">{{ exercise.name }}</option>
+                {% endfor %}
+              </select>
+            </div>
           </div>
-          <div class="col-md-10">
-            <select name="exercise">
-              <option value="----">----</option>
-              {% for exercise in exercises %}
-                <option value="{{ exercise.name }}">{{ exercise.name }}</option>
-              {% endfor %}
-            </select>
+          <div class="row mt-4">
+            <div class="col-2">
+            </div>
+            <div class="col-3">
+              <div class="d-flex justify-content-center">Weight</div>
+            </div>
+            <div class="col-3">
+              <div class="d-flex justify-content-center">Reps</div>
+            </div>
+          </div>
+          <div class="row set" id="set1">
+            <div class="col-2">
+              <label>Set 1</label> 
+            </div>
+            <div class="col-3">
+              <input type="text" class="form-control" name="E1S1-weight"></input>
+            </div>
+            <div class="col-3">
+              <input type="text" class="form-control" name="E1S1-reps"></input>
+            </div>
+            <div class="col-2">
+              <button type="button" class="btn btn-outline-danger removeSet">Remove Set
+              </button>
+            </div>
+          </div>
+          <div class="row mt-2 justify-content-start" id="addSetButton">
+            <div class="col-2"></div>
+            <div class="col-3">
+              <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
+            </div>
           </div>
         </div>
-        <div class="row mt-4">
-          <div class="col-2">
-          </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center">Weight</div>
-          </div>
-          <div class="col-3">
-            <div class="d-flex justify-content-center">Reps</div>
-          </div>
-        </div>
-        <div class="row set" id="set1">
-          <div class="col-2">
-            <label>Set 1</label> 
-          </div>
-          <div class="col-3">
-            <input type="text" class="form-control" name="E1S1-weight"></input>
-          </div>
-          <div class="col-3">
-            <input type="text" class="form-control" name="E1S1-reps"></input>
-          </div>
-          <div class="col-2">
-            <button type="button" class="btn btn-outline-danger removeSet">Remove Set
-            </button>
-          </div>
-        </div>
-        <div class="row mt-2 justify-content-start" id="addSetButton">
-          <div class="col-2"></div>
-          <div class="col-3">
-            <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
-          </div>
-        </div>
+      </div>
+      <hr>
+      <div class="container">
+        <button type="button" class="btn btn-outline-success addExercise">Add New Exercise</button>
       </div>
     </fieldset>
     <div class="container">
