Get dynamically adding and removing sets working with dynamically added exercises

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -22,7 +22,7 @@
             <div class="col-md">
               <label>Exercise</label>
             </div>
-            <div class="col-md-10">
+            <div class="col-md-10" id="exercise_options">
               <select name="exercise">
                 <option value="----">----</option>
                 {% for exercise in exercises %}
@@ -56,7 +56,7 @@
               </button>
             </div>
           </div>
-          <div class="row mt-2 justify-content-start" id="addSetButton">
+          <div class="row mt-2 justify-content-start" id="addSetButton1">
             <div class="col-2"></div>
             <div class="col-3">
               <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
