--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -46,10 +46,10 @@
               <label>Set 1</label> 
             </div>
             <div class="col-3">
-              <input type="text" class="form-control" name="E1S1-weight"></input>
+              <input type="text" class="form-control" name="E1-weight"></input>
             </div>
             <div class="col-3">
-              <input type="text" class="form-control" name="E1S1-reps"></input>
+              <input type="text" class="form-control" name="E1-reps"></input>
             </div>
             <div class="col-2">
               <button type="button" class="btn btn-outline-danger removeSet">Remove Set
