--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-  <form method="POST">
+  <form method="POST" name="workoutCreationForm" onsubmit="return validateForm()">
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">New Workout</legend>
@@ -41,7 +41,7 @@
               <div class="d-flex justify-content-center">Reps</div>
             </div>
           </div>
-          <div class="row set" id="set1">
+          <div class="row set" id="e1-set1">
             <div class="col-2">
               <label>Set 1</label> 
             </div>
