Add option to update workouts listed in overview page

--- a/workout/templates/workout/overview.html
+++ b/workout/templates/workout/overview.html
@@ -14,6 +14,7 @@
         <p class="card-text">{{ workout.description }}</p>
         <p class="card-text font-italic">{{ workout.created }}</p>
         <a href="{% url 'workout_detail' workout.pk %}" class="btn btn-primary">Workout Detail</a> 
+        <a href="{% url 'workout_update' workout.pk %}" class="btn btn-secondary">Update Workout</a>
       </div>
     </div>
   </div>
