--- a/workout/templates/workout/detail.html
+++ b/workout/templates/workout/detail.html
@@ -25,7 +25,7 @@
   </br>
   {% endfor %}
   <div class="container">
-    <a class="btn btn-primary" href="{% url 'workout_update' pk=object.pk %}">Update Workout</a>
+    <a class="btn btn-secondary" href="{% url 'workout_update' pk=object.pk %}">Update Workout</a>
     <a class="btn btn-danger" href="{% url 'workout_delete' pk=object.pk %}">Delete Workout</a>
   </div>
 {% endblock content %}
