--- a/workout/templates/workout/overview.html
+++ b/workout/templates/workout/overview.html
@@ -1,6 +1,6 @@
 {% extends "workout/base.html" %}
 {% block content %}
-  <div class="container" style="padding-top: 30px">
+  <div class="container">
     <h3>Past Workouts</h3>
   </div>
   <div class="container">
