Add functionality to remove an exercise

--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -63,6 +63,12 @@
               <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
             </div>
           </div>
+          <div class="row mt-2 justify-content-start" id="removeExercise1">
+            <div class="col-2"></div>
+            <div class="col-3">
+              <button type="button" class="btn btn-danger removeExercise">Remove Exercise</button>
+            </div>
+          </div>
         </div>
       </div>
       <hr>
