--- a/workout/templates/workout/update_workout.html
+++ b/workout/templates/workout/update_workout.html
@@ -68,6 +68,12 @@
                 <button type="button" class="btn btn-outline-success addSet">Add New Set</button>
               </div>
             </div>
+            <div class="row mt-2 justify-content-start" id="removeExercise{{ exercise.exercise_number }}">
+              <div class="col-2"></div>
+              <div class="col-3">
+                <button type="button" class="btn btn-danger removeExercise">Remove Exercise</button>
+              </div>
+            </div>
           </div>
         {% endfor %}
       </div>
