--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -17,6 +17,10 @@
     .btn-group button{
       margin: 0 7px; 
     }
+    #footer {
+      bottom: 0;
+      width: 100%;
+    }
   </style>
   <title>Workout Tracker</title>
 </head>
@@ -57,8 +61,14 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <footer class="page-footer">
-    </footer> 
+     
+
+    <footer class="bg-dark text-center text-white mt-4" id="footer">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        Workout Tracker
+      </div>
+      <!-- Copyright -->
+    </footer>
     {% block js %} {% endblock js %}
   </body>
 </html>
