--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -27,9 +27,12 @@
               <select name="exercise" style="width:240px" class="select-exercise" id="select-e1">
                 <option value="----">----</option>
                 {% for exercise in exercises %}
-                  <option value="{{ exercise.name }}">{{ exercise.name }}</option>
+                  <option value="{{ exercise.name }}" class="options">{{ exercise.name }}</option>
                 {% endfor %}
               </select>
+              <div class="search-box">
+                <input type="text" class="search-box" placeholder="Start Typing..." />
+              </div>
             </div>
           </div>
           <div class="row mt-4">
