--- a/workout/templates/workout/update_workout.html
+++ b/workout/templates/workout/update_workout.html
@@ -25,7 +25,7 @@
                 <label>Exercise</label>
               </div>
               <div class="col" id="exercise_options">
-                <select name="exercise" class="select-exercise" style="width:240px" id="select-e{{ exercise.exercise_number }}">
+                <select name="exercise" class="select-exercise" id="select-e{{ exercise.exercise_number }}">
                   <option value="{{ exercise.exercise_type.name }}">{{ exercise.exercise_type.name }}</option>
                   {% for e in exercises %}
                     {% if exercise.exercise_type.name != e.name %}
