--- a/workout/templates/workout/create_workout.html
+++ b/workout/templates/workout/create_workout.html
@@ -19,8 +19,10 @@
       <div class="exercises">
         <hr>
         <div class="container exercise" id="exercise1">
-          <div class="row justify-content-between mt-4">
+          <div class="row">
             <small class="help-text">Select option 'Other' to add exercises not listed here</small>
+          </div>
+          <div class="row justify-content-between mt-4">
             <div class="col">
               <label>Exercise</label>
             </div>
