--- a/workout/templates/workout/update_workout.html
+++ b/workout/templates/workout/update_workout.html
@@ -20,8 +20,10 @@
         {% for exercise in object.exercises.all %}
           <hr>
           <div class="container exercise" id="exercise{{ exercise.exercise_number }}">
-            <div class="row justify-content-between mt-4">
+            <div class="row">
               <small class="help-text">Select option 'Other' to add exercises not listed here</small>
+            </div>
+            <div class="row justify-content-between mt-4">
               <div class="col">
                 <label>Exercise</label>
               </div>
