Get 'Other' input box working

--- a/workout/templates/workout/update_workout.html
+++ b/workout/templates/workout/update_workout.html
@@ -23,7 +23,7 @@
             <div class="row">
               <small class="help-text">Select option 'Other' to add exercises not listed here</small>
             </div>
-            <div class="row justify-content-between mt-4">
+            <div class="row justify-content-between mt-4" id="select-e1-div">
               <div class="col">
                 <label>Exercise</label>
               </div>
