Add profile page

--- a/workout/templates/workout/base.html
+++ b/workout/templates/workout/base.html
@@ -20,6 +20,7 @@
               <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
               <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
             {% else %}
+              <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
               <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
             {% endif %}
           </div>
