Add password reset view

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -16,6 +16,7 @@
       </fieldset>
       <div class="form-group">
         <button class="btn btn-outline-info" type="submit">Update Profile</button>
+        <a class="btn btn-outline-danger" href="{% url 'password_reset' %}">Forgot Password?</a>
       </div>
     </form>
   </div>
